# atowpy

./: .gitignore  README.md  pyproject.toml
atowpy/: dask_wrappers.py  explore.py  features.py  load.py  paths.py  project.py  read.py  submit.py  version.py
atowpy/model/: simple.py  trajectory.py  xgboost_wrappers.py
examples/: download_data.py  explore_data.py  fit.py  predict.py  preparations_for_fitting.py
models/: encoder_v6.pkl  model_v6.pkl  scaler_v6.pkl
submissions/: team_loyal_hippo_v10_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v11_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v12_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v13_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v1_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v2_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v3_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v4_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v5_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v6_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v7_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v8_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv  team_loyal_hippo_v9_d6020e5c-d553-4262-acfa-cb16ab34cc86.csv
