[tool.poetry]
name = "atowpy"
version = "0.1.0"
description = "Machine learning package for Actual TakeOff Weight (ATOW) estimation"
authors = ["Dreamlone <mik.sarafanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
pyopensky = "^2.9"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
